# mdfiles

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
tests/: cli.rs
