[package]
name = "mdfiles"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["mdfiles contributors"]
description = "Find files by modification date and suffix, output as markdown links"
repository = "https://github.com/tebeka/mdfiles"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
